src/AST/parser/.antlr/FormGeneratorParser.java
// Generated from /Users/alexanderclements/Documents/School/CPSC 410/Group14Project1/src/AST/parser/FormGeneratorParser.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class FormGeneratorParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		OBJECT_START=1, OBJECT_END=2, LIST_START=3, LIST_END=4, SEP=5, COLON=6, 
		PAREN_START=7, PAREN_END=8, STRING=9, NUM=10, PAGES_KEY=11, FUNCTIONS_KEY=12, 
		QUESTIONS_KEY=13, ID_KEY=14, HEADER_KEY=15, GOTO_KEY=16, VARIABLES_KEY=17, 
		INSTRUCTIONS_KEY=18, DISPLAY_QUESTIONS_KEY=19, TYPE_KEY=20, LABEL_KEY=21, 
		OPTIONS_KEY=22, DEPENDS_ON_KEY=23, DISPLAY_IF_KEY=24, LOOP_KEY=25, IS_REQUIRED_KEY=26, 
		CORRECT_ANSWER_KEY=27, DISPLAY_ALL=28, TEXT_INPUT=29, RADIO=30, CHECKBOX=31, 
		DROPDOWN=32, RETURN=33, ASSIGN=34, IF_KEY=35, ELSE_KEY=36, FORM_OBJ_KEY=37, 
		DOT=38, FORM_STATE_KEY=39, TRUE=40, FALSE=41, PLUS=42, MINUS=43, MULTIPLY=44, 
		DIVIDE=45, VARIABLE_NAME=46, LOOP_INDEX=47, WS=48;
	public static final int
		RULE_program = 0, RULE_pages = 1, RULE_page_array = 2, RULE_page = 3, 
		RULE_page_fields = 4, RULE_page_field = 5, RULE_id_field = 6, RULE_header_field = 7, 
		RULE_instructions_field = 8, RULE_questions_field = 9, RULE_goTo_field = 10, 
		RULE_displayQuestions_field = 11, RULE_text_field_value = 12, RULE_variables = 13, 
		RULE_variables_object = 14, RULE_variable = 15, RULE_variable_value = 16, 
		RULE_question_array = 17, RULE_question = 18, RULE_question_fields = 19, 
		RULE_question_field = 20, RULE_type_field = 21, RULE_label_field = 22, 
		RULE_options_field = 23, RULE_dependsOn_field = 24, RULE_displayIf_field = 25, 
		RULE_loop_field = 26, RULE_isRequired_field = 27, RULE_correctAnswer_field = 28, 
		RULE_array = 29, RULE_array_value = 30, RULE_question_type = 31, RULE_functions = 32, 
		RULE_function_array = 33, RULE_function = 34, RULE_function_params = 35, 
		RULE_parameter = 36, RULE_function_body = 37, RULE_statement = 38, RULE_var_assignment = 39, 
		RULE_returnValue = 40, RULE_function_call = 41, RULE_conditional = 42, 
		RULE_if_cond = 43, RULE_else_if_cond = 44, RULE_else_cond = 45, RULE_condition = 46, 
		RULE_cond_body = 47, RULE_returnValueIf = 48, RULE_expression = 49, RULE_math_expression = 50, 
		RULE_extended_math_expression = 51, RULE_math_op = 52, RULE_form_state_access = 53, 
		RULE_path_to_key = 54, RULE_path_to_page_key = 55, RULE_path_to_question_key = 56, 
		RULE_boolean = 57;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "pages", "page_array", "page", "page_fields", "page_field", 
			"id_field", "header_field", "instructions_field", "questions_field", 
			"goTo_field", "displayQuestions_field", "text_field_value", "variables", 
			"variables_object", "variable", "variable_value", "question_array", "question", 
			"question_fields", "question_field", "type_field", "label_field", "options_field", 
			"dependsOn_field", "displayIf_field", "loop_field", "isRequired_field", 
			"correctAnswer_field", "array", "array_value", "question_type", "functions", 
			"function_array", "function", "function_params", "parameter", "function_body", 
			"statement", "var_assignment", "returnValue", "function_call", "conditional", 
			"if_cond", "else_if_cond", "else_cond", "condition", "cond_body", "returnValueIf", 
			"expression", "math_expression", "extended_math_expression", "math_op", 
			"form_state_access", "path_to_key", "path_to_page_key", "path_to_question_key", 
			"boolean"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'{'", "'}'", "'['", "']'", "','", "':'", "'('", "')'", null, null, 
			"'pages'", "'functions'", "'questions'", "'id'", "'header'", null, "'vars'", 
			"'instructions'", "'displayQuestions'", "'type'", "'label'", "'options'", 
			"'dependsOn'", "'displayIf'", "'loop'", "'isRequired'", "'correctAnswer'", 
			"'all'", "'textInput'", "'radio'", "'checkbox'", "'dropdown'", "'return'", 
			"'='", "'if'", "'else'", "'Form'", "'.'", "'FormState'", "'true'", "'false'", 
			"'+'", "'-'", "'*'", "'/'", null, "'loopIndex'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "OBJECT_START", "OBJECT_END", "LIST_START", "LIST_END", "SEP", 
			"COLON", "PAREN_START", "PAREN_END", "STRING", "NUM", "PAGES_KEY", "FUNCTIONS_KEY", 
			"QUESTIONS_KEY", "ID_KEY", "HEADER_KEY", "GOTO_KEY", "VARIABLES_KEY", 
			"INSTRUCTIONS_KEY", "DISPLAY_QUESTIONS_KEY", "TYPE_KEY", "LABEL_KEY", 
			"OPTIONS_KEY", "DEPENDS_ON_KEY", "DISPLAY_IF_KEY", "LOOP_KEY", "IS_REQUIRED_KEY", 
			"CORRECT_ANSWER_KEY", "DISPLAY_ALL", "TEXT_INPUT", "RADIO", "CHECKBOX", 
			"DROPDOWN", "RETURN", "ASSIGN", "IF_KEY", "ELSE_KEY", "FORM_OBJ_KEY", 
			"DOT", "FORM_STATE_KEY", "TRUE", "FALSE", "PLUS", "MINUS", "MULTIPLY", 
			"DIVIDE", "VARIABLE_NAME", "LOOP_INDEX", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "FormGeneratorParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public FormGeneratorParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode OBJECT_START() { return getToken(FormGeneratorParser.OBJECT_START, 0); }
		public PagesContext pages() {
			return getRuleContext(PagesContext.class,0);
		}
		public TerminalNode OBJECT_END() { return getToken(FormGeneratorParser.OBJECT_END, 0); }
		public TerminalNode EOF() { return getToken(FormGeneratorParser.EOF, 0); }
		public List<TerminalNode> SEP() { return getTokens(FormGeneratorParser.SEP); }
		public TerminalNode SEP(int i) {
			return getToken(FormGeneratorParser.SEP, i);
		}
		public FunctionsContext functions() {
			return getRuleContext(FunctionsContext.class,0);
		}
		public VariablesContext variables() {
			return getRuleContext(VariablesContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			match(OBJECT_START);
			setState(117);
			pages();
			setState(120);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				{
				setState(118);
				match(SEP);
				setState(119);
				functions();
				}
				break;
			}
			setState(124);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SEP) {
				{
				setState(122);
				match(SEP);
				setState(123);
				variables();
				}
			}

			setState(126);
			match(OBJECT_END);
			setState(127);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PagesContext extends ParserRuleContext {
		public TerminalNode PAGES_KEY() { return getToken(FormGeneratorParser.PAGES_KEY, 0); }
		public TerminalNode COLON() { return getToken(FormGeneratorParser.COLON, 0); }
		public Page_arrayContext page_array() {
			return getRuleContext(Page_arrayContext.class,0);
		}
		public PagesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pages; }
	}

	public final PagesContext pages() throws RecognitionException {
		PagesContext _localctx = new PagesContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_pages);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			match(PAGES_KEY);
			setState(130);
			match(COLON);
			setState(131);
			page_array();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Page_arrayContext extends ParserRuleContext {
		public TerminalNode LIST_START() { return getToken(FormGeneratorParser.LIST_START, 0); }
		public List<PageContext> page() {
			return getRuleContexts(PageContext.class);
		}
		public PageContext page(int i) {
			return getRuleContext(PageContext.class,i);
		}
		public TerminalNode LIST_END() { return getToken(FormGeneratorParser.LIST_END, 0); }
		public List<TerminalNode> SEP() { return getTokens(FormGeneratorParser.SEP); }
		public TerminalNode SEP(int i) {
			return getToken(FormGeneratorParser.SEP, i);
		}
		public Page_arrayContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_page_array; }
	}

	public final Page_arrayContext page_array() throws RecognitionException {
		Page_arrayContext _localctx = new Page_arrayContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_page_array);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			match(LIST_START);
			setState(134);
			page();
			setState(139);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SEP) {
				{
				{
				setState(135);
				match(SEP);
				setState(136);
				page();
				}
				}
				setState(141);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(142);
			match(LIST_END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PageContext extends ParserRuleContext {
		public TerminalNode OBJECT_START() { return getToken(FormGeneratorParser.OBJECT_START, 0); }
		public Page_fieldsContext page_fields() {
			return getRuleContext(Page_fieldsContext.class,0);
		}
		public TerminalNode OBJECT_END() { return getToken(FormGeneratorParser.OBJECT_END, 0); }
		public PageContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_page; }
	}

	public final PageContext page() throws RecognitionException {
		PageContext _localctx = new PageContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_page);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			match(OBJECT_START);
			setState(145);
			page_fields();
			setState(146);
			match(OBJECT_END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Page_fieldsContext extends ParserRuleContext {
		public List<Page_fieldContext> page_field() {
			return getRuleContexts(Page_fieldContext.class);
		}
		public Page_fieldContext page_field(int i) {
			return getRuleContext(Page_fieldContext.class,i);
		}
		public List<TerminalNode> SEP() { return getTokens(FormGeneratorParser.SEP); }
		public TerminalNode SEP(int i) {
			return getToken(FormGeneratorParser.SEP, i);
		}
		public Page_fieldsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_page_fields; }
	}

	public final Page_fieldsContext page_fields() throws RecognitionException {
		Page_fieldsContext _localctx = new Page_fieldsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_page_fields);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			page_field();
			setState(153);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SEP) {
				{
				{
				setState(149);
				match(SEP);
				setState(150);
				page_field();
				}
				}
				setState(155);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Page_fieldContext extends ParserRuleContext {
		public Id_fieldContext id_field() {
			return getRuleContext(Id_fieldContext.class,0);
		}
		public Header_fieldContext header_field() {
			return getRuleContext(Header_fieldContext.class,0);
		}
		public Instructions_fieldContext instructions_field() {
			return getRuleContext(Instructions_fieldContext.class,0);
		}
		public GoTo_fieldContext goTo_field() {
			return getRuleContext(GoTo_fieldContext.class,0);
		}
		public Questions_fieldContext questions_field() {
			return getRuleContext(Questions_fieldContext.class,0);
		}
		public DisplayQuestions_fieldContext displayQuestions_field() {
			return getRuleContext(DisplayQuestions_fieldContext.class,0);
		}
		public Page_fieldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_page_field; }
	}

	public final Page_fieldContext page_field() throws RecognitionException {
		Page_fieldContext _localctx = new Page_fieldContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_page_field);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(162);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID_KEY:
				{
				setState(156);
				id_field();
				}
				break;
			case HEADER_KEY:
				{
				setState(157);
				header_field();
				}
				break;
			case INSTRUCTIONS_KEY:
				{
				setState(158);
				instructions_field();
				}
				break;
			case GOTO_KEY:
				{
				setState(159);
				goTo_field();
				}
				break;
			case QUESTIONS_KEY:
				{
				setState(160);
				questions_field();
				}
				break;
			case DISPLAY_QUESTIONS_KEY:
				{
				setState(161);
				displayQuestions_field();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Id_fieldContext extends ParserRuleContext {
		public TerminalNode ID_KEY() { return getToken(FormGeneratorParser.ID_KEY, 0); }
		public TerminalNode COLON() { return getToken(FormGeneratorParser.COLON, 0); }
		public Text_field_valueContext text_field_value() {
			return getRuleContext(Text_field_valueContext.class,0);
		}
		public Id_fieldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_id_field; }
	}

	public final Id_fieldContext id_field() throws RecognitionException {
		Id_fieldContext _localctx = new Id_fieldContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_id_field);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(164);
			match(ID_KEY);
			setState(165);
			match(COLON);
			setState(166);
			text_field_value();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Header_fieldContext extends ParserRuleContext {
		public TerminalNode HEADER_KEY() { return getToken(FormGeneratorParser.HEADER_KEY, 0); }
		public TerminalNode COLON() { return getToken(FormGeneratorParser.COLON, 0); }
		public Text_field_valueContext text_field_value() {
			return getRuleContext(Text_field_valueContext.class,0);
		}
		public Header_fieldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_header_field; }
	}

	public final Header_fieldContext header_field() throws RecognitionException {
		Header_fieldContext _localctx = new Header_fieldContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_header_field);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(168);
			match(HEADER_KEY);
			setState(169);
			match(COLON);
			setState(170);
			text_field_value();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Instructions_fieldContext extends ParserRuleContext {
		public TerminalNode INSTRUCTIONS_KEY() { return getToken(FormGeneratorParser.INSTRUCTIONS_KEY, 0); }
		public TerminalNode COLON() { return getToken(FormGeneratorParser.COLON, 0); }
		public Text_field_valueContext text_field_value() {
			return getRuleContext(Text_field_valueContext.class,0);
		}
		public Instructions_fieldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instructions_field; }
	}

	public final Instructions_fieldContext instructions_field() throws RecognitionException {
		Instructions_fieldContext _localctx = new Instructions_fieldContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_instructions_field);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(172);
			match(INSTRUCTIONS_KEY);
			setState(173);
			match(COLON);
			setState(174);
			text_field_value();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Questions_fieldContext extends ParserRuleContext {
		public TerminalNode QUESTIONS_KEY() { return getToken(FormGeneratorParser.QUESTIONS_KEY, 0); }
		public TerminalNode COLON() { return getToken(FormGeneratorParser.COLON, 0); }
		public Question_arrayContext question_array() {
			return getRuleContext(Question_arrayContext.class,0);
		}
		public Questions_fieldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_questions_field; }
	}

	public final Questions_fieldContext questions_field() throws RecognitionException {
		Questions_fieldContext _localctx = new Questions_fieldContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_questions_field);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(176);
			match(QUESTIONS_KEY);
			setState(177);
			match(COLON);
			setState(178);
			question_array();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GoTo_fieldContext extends ParserRuleContext {
		public TerminalNode GOTO_KEY() { return getToken(FormGeneratorParser.GOTO_KEY, 0); }
		public TerminalNode COLON() { return getToken(FormGeneratorParser.COLON, 0); }
		public Text_field_valueContext text_field_value() {
			return getRuleContext(Text_field_valueContext.class,0);
		}
		public GoTo_fieldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_goTo_field; }
	}

	public final GoTo_fieldContext goTo_field() throws RecognitionException {
		GoTo_fieldContext _localctx = new GoTo_fieldContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_goTo_field);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(180);
			match(GOTO_KEY);
			setState(181);
			match(COLON);
			setState(182);
			text_field_value();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DisplayQuestions_fieldContext extends ParserRuleContext {
		public TerminalNode DISPLAY_QUESTIONS_KEY() { return getToken(FormGeneratorParser.DISPLAY_QUESTIONS_KEY, 0); }
		public TerminalNode COLON() { return getToken(FormGeneratorParser.COLON, 0); }
		public TerminalNode DISPLAY_ALL() { return getToken(FormGeneratorParser.DISPLAY_ALL, 0); }
		public TerminalNode NUM() { return getToken(FormGeneratorParser.NUM, 0); }
		public DisplayQuestions_fieldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_displayQuestions_field; }
	}

	public final DisplayQuestions_fieldContext displayQuestions_field() throws RecognitionException {
		DisplayQuestions_fieldContext _localctx = new DisplayQuestions_fieldContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_displayQuestions_field);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(184);
			match(DISPLAY_QUESTIONS_KEY);
			setState(185);
			match(COLON);
			setState(186);
			_la = _input.LA(1);
			if ( !(_la==NUM || _la==DISPLAY_ALL) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Text_field_valueContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(FormGeneratorParser.STRING, 0); }
		public TerminalNode VARIABLE_NAME() { return getToken(FormGeneratorParser.VARIABLE_NAME, 0); }
		public Function_callContext function_call() {
			return getRuleContext(Function_callContext.class,0);
		}
		public Text_field_valueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_text_field_value; }
	}

	public final Text_field_valueContext text_field_value() throws RecognitionException {
		Text_field_valueContext _localctx = new Text_field_valueContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_text_field_value);
		try {
			setState(191);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(188);
				match(STRING);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(189);
				match(VARIABLE_NAME);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(190);
				function_call();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VariablesContext extends ParserRuleContext {
		public TerminalNode VARIABLES_KEY() { return getToken(FormGeneratorParser.VARIABLES_KEY, 0); }
		public TerminalNode COLON() { return getToken(FormGeneratorParser.COLON, 0); }
		public Variables_objectContext variables_object() {
			return getRuleContext(Variables_objectContext.class,0);
		}
		public VariablesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variables; }
	}

	public final VariablesContext variables() throws RecognitionException {
		VariablesContext _localctx = new VariablesContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_variables);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(193);
			match(VARIABLES_KEY);
			setState(194);
			match(COLON);
			setState(195);
			variables_object();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Variables_objectContext extends ParserRuleContext {
		public TerminalNode OBJECT_START() { return getToken(FormGeneratorParser.OBJECT_START, 0); }
		public TerminalNode OBJECT_END() { return getToken(FormGeneratorParser.OBJECT_END, 0); }
		public List<VariableContext> variable() {
			return getRuleContexts(VariableContext.class);
		}
		public VariableContext variable(int i) {
			return getRuleContext(VariableContext.class,i);
		}
		public List<TerminalNode> SEP() { return getTokens(FormGeneratorParser.SEP); }
		public TerminalNode SEP(int i) {
			return getToken(FormGeneratorParser.SEP, i);
		}
		public Variables_objectContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variables_object; }
	}

	public final Variables_objectContext variables_object() throws RecognitionException {
		Variables_objectContext _localctx = new Variables_objectContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_variables_object);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(197);
			match(OBJECT_START);
			setState(206);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==VARIABLE_NAME) {
				{
				setState(198);
				variable();
				setState(203);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==SEP) {
					{
					{
					setState(199);
					match(SEP);
					setState(200);
					variable();
					}
					}
					setState(205);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(208);
			match(OBJECT_END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
